--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <body>
 
     <div class="header">
-        <div class="sanskrit">|| ॐ श्री गुरुಭ್ಯೋ ನಮಃ ||</div>
+        <div class="sanskrit"> || ॐ श्री गुरुभ्यो नम:, हरि: ॐ || | </div>
         <h1>Rigveda Samhita Player</h1>
         <p>A specialized digital environment for Vedic Adhyayana.</p>
     </div>
@@ -55,3 +55,4 @@
 
 </body>
 </html>
+
