New online Player added

--- a/index.html
+++ b/index.html
@@ -116,16 +116,6 @@
         }
         .badge-new { background: #27ae60; }
         .badge-offline { background: #9b59b6; }
-        .kannada-text { 
-            display: block; 
-            font-size: 0.95em; 
-            color: #7f8c8d; 
-            margin: 15px 0;
-            padding: 10px;
-            background: #ecf0f1;
-            border-radius: 6px;
-            font-weight: 500;
-        }
         .launch-btn {
             display: inline-block;
             background: #2980b9;
@@ -311,24 +301,21 @@
         <!-- Player Cards -->
         <div class="card-container">
             <a href="RSP_V6_A_ONLINE.html" class="card">
-                <h2>🌐 Online Player <span class="badge badge-new">New V6</span></h2>
-                <p>Access all 10 Mandalas instantly from your browser. No downloads needed! Stream audio and text directly from the cloud with real-time synchronization.</p>
-                <div class="kannada-text">ನೇರವಾಗಿ ಆನ್‌ಲೈನ್‌ನಲ್ಲಿ ಬಳಸಲು ಇದನ್ನು ಕ್ಲಿಕ್ ಮಾಡಿ.</div>
-                <span class="launch-btn">Launch Online Player →</span>
+                <h2>🌐 Multi-Rig Online Player <span class="badge badge-new">New V6</span></h2>
+                <p>Complete Sukta player with all mantras. Access all 10 Mandalas instantly from your browser. Stream audio and text with real-time synchronization. Features: Sukta/Rig looping, meanings, notes, and multiple view modes.</p>
+                <span class="launch-btn">Launch Multi-Rig Player →</span>
+            </a>
+
+            <a href="RSP_1Rig_ONLINE.html" class="card">
+                <h2>📖 Single Rig Viewer <span class="badge badge-new">New!</span></h2>
+                <p>Focus on one mantra at a time. Perfect for deep study with 5 different view modes: Rig text, Pada meanings (English/Kannada), and Full insights. Loop individual mantras for focused practice.</p>
+                <span class="launch-btn">Launch Rig Viewer →</span>
             </a>
 
             <a href="RSP_V4_A_P.html" class="card">
                 <h2>💾 Offline Player <span class="badge badge-offline">V4</span></h2>
-                <p>Best for offline study. Download Mandala ZIP files from the releases section and use without internet connection. Full control over your study materials.</p>
-                <div class="kannada-text">ಆಫ್‌ಲೈನ್ ಬಳಕೆಗಾಗಿ ಇದನ್ನು ಬಳಸಿ (ZIP ಫೈಲ್‌ಗಳು ಬೇಕಾಗುತ್ತವೆ).</div>
+                <p>Best for offline study. Download Mandala ZIP files from the releases section and use without internet connection. Full control over your study materials with all features.</p>
                 <span class="launch-btn">Launch Offline Player →</span>
-            </a>
-
-            <a href="RSP_1Rig.html" class="card">
-                <h2>📖 Mantra Reader</h2>
-                <p>Focused e-book reader for studying individual Mantras. Perfect for detailed word-by-word analysis and meaning exploration.</p>
-                <div class="kannada-text">ಮಂತ್ರ ಪಠಣ ಮತ್ತು ಅರ್ಥ ಓದಲು ಸುಲಭವಾದ ಪ್ಲೇಯರ್.</div>
-                <span class="launch-btn">Open Reader →</span>
             </a>
         </div>
 
